# cfr-agents

./: .gitignore  LITELLM_INTEGRATION.md  test_trace.py
.github/: copilot-instructions.md
backend/: .env.example  Dockerfile  Dockerfile.proxy  pyproject.toml  pytest.ini  requirements.txt  startup.txt  test_ws.py
backend/.azure/: config
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py
backend/app/routers/: __init__.py  admin.py  auth.py  documents.py  feedback.py  health.py
backend/app/services/: cache.py  conversation.py  feedback.py  geolocation.py  indexer.py  orchestrator.py  usage.py
backend/app/tools/: __init__.py  aps.py  documents.py  drs.py  fetch_cfr.py  search_indexed.py
backend/docs/: TESTING.md
backend/scripts/: seed_index.py
backend/search_proxy/: __init__.py  config.py  main.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  conftest.py  test_conversation_flow.py  test_document_pipeline.py  test_external_apis.py  test_multi_agent.py
backend/tests/unit/: test_main_websocket.py
backend/tests/unit/routers/: test_admin.py  test_auth.py  test_documents.py  test_feedback.py
backend/tests/unit/services/: test_orchestrator.py  test_usage.py
backend/tests/unit/tools/: test_drs.py  test_fetch_cfr.py  test_search_indexed.py
docs/: aps-api-documentation.md  cls-api-documentation.md  drs-api-documentation.md  drs-metadata-mapping.md  progressive-caching.md  session-2026-01-09.md
frontend/: .env.production  index.html  package-lock.json  package.json  staticwebapp.config.json  swa-cli.config.json  vite.config.ts
scripts/: check_daily_usage.py  check_trial_usage.py  convert_drs_xlsx.py  create_dod_index.py  create_nrc_index.py  create_search_index.py  current_index.json  dev_start.sh  fix_index_schema.py  generate_diagrams.py  test_faa_azure.py  test_nrc_azure.py  test_personal_docs.py  (+2 more)
(+24 files in other folders)
